editors/tree-sitter-ovsm/test/corpus/expressions.txt
================================================================================
Simple list expression
================================================================================

(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (operator))
    (number
      (integer))
    (number
      (integer))))

================================================================================
Nested list expressions
================================================================================

(+ 1 (* 2 3))

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (operator))
    (number
      (integer))
    (list
      (list_head
        (operator))
      (number
        (integer))
      (number
        (integer)))))

================================================================================
Define variable
================================================================================

(define x 42)

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (special_form))
    (symbol)
    (number
      (integer))))

================================================================================
Define function
================================================================================

(defun add (a b) (+ a b))

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (special_form))
    (symbol)
    (array
      (symbol)
      (symbol))
    (list
      (list_head
        (operator))
      (symbol)
      (symbol))))

================================================================================
Array literal
================================================================================

[1 2 3 4 5]

--------------------------------------------------------------------------------

(source_file
  (array
    (number
      (integer))
    (number
      (integer))
    (number
      (integer))
    (number
      (integer))
    (number
      (integer))))

================================================================================
Object literal
================================================================================

{:name "Alice" :age 30}

--------------------------------------------------------------------------------

(source_file
  (object
    (object_pair
      (keyword_argument)
      (string
        (string_content)))
    (object_pair
      (keyword_argument)
      (number
        (integer)))))

================================================================================
Lambda expression
================================================================================

(lambda (x) (* x x))

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (special_form))
    (array
      (symbol))
    (list
      (list_head
        (operator))
      (symbol)
      (symbol))))

================================================================================
Let binding
================================================================================

(let ((x 10) (y 20)) (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (special_form))
    (array
      (array
        (symbol)
        (number
          (integer)))
      (array
        (symbol)
        (number
          (integer))))
    (list
      (list_head
        (operator))
      (symbol)
      (symbol))))

================================================================================
Comment
================================================================================

; This is a comment
(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list
    (list_head
      (operator))
    (number
      (integer))
    (number
      (integer))))

================================================================================
String with escape
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_content)
    (escape_sequence)
    (string_content)))

================================================================================
Quote expression
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(source_file
  (quote_expression
    (list
      (number
        (integer))
      (number
        (integer))
      (number
        (integer)))))

================================================================================
Boolean and null
================================================================================

(if true "yes" null)

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (special_form))
    (boolean)
    (string
      (string_content))
    (null)))

================================================================================
Built-in function call
================================================================================

(mapcar length names)

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (builtin_function))
    (symbol)
    (symbol)))

================================================================================
Blockchain function call
================================================================================

(getBalance "ABC...XYZ")

--------------------------------------------------------------------------------

(source_file
  (list
    (list_head
      (builtin_function))
    (string
      (string_content))))
